# masto.nyc

./: .gitignore  README.md  easy-upgrade.sh  secret-registry.yaml
cronjobs/: configmap-cronjob-fediblockhole.yaml  cronjob-accapprove.yaml  cronjob-backups.yaml  cronjob-fediblockhole.yaml  cronjob-indexup.yaml  cronjob-media-remove.yaml  secret-uptime.yaml
crunchy-db/: crunchy-postgres.yaml
crunchy-db/s3/: s3.conf  secret-s3.yaml
dependencies/: cloudflared.yaml  configmap-cloudflared.yaml  configmap-nginx.yaml  deployment-cloudflared.yaml  deployment-libretranslate.yaml  deployment-nginx.yaml  secret-welcome.yaml  service-libretranslate.yaml  service-nginx.yaml  service-welcome-webhook.yaml  vector-agent.toml  webhook-welcome.yaml
docs/: high_level_arch.drawio
elasticsearch/: service.yaml
elasticsearch/coordinating/: statefulset.yaml  svc-headless.yaml
elasticsearch/data/: statefulset.yaml  svc-headless.yaml
elasticsearch/ingest/: statefulset.yaml  svc-headless.yaml
elasticsearch/master/: statefulset.yaml  svc-headless.yaml
errorpages/: cferror.html  error-417.chunk.js
mastodon/: configmap-env.yaml  configmap-nginx.yaml  deployment-sidekiq.yaml  deployment-streaming.yaml  deployment-web.yaml  pvc-assets.yaml  pvc-system.yaml  service-streaming.yaml  service-web.yaml  serviceaccount.yaml
redis/: configmap.yaml  headless-svc.yaml  health-configmap.yaml  scripts-configmap.yaml  secret-redis.yaml  serviceaccount.yaml
webhooks/welcome-bot/: Dockerfile  pyproject.toml  requirements.txt
webhooks/welcome-bot/app/: welcome.py
(+9 files in other folders)
