[tool.poetry]
name = "masto-nyc-welcome-bot"
version = "0.1.0"
description = "Shouts yerrr at new users who sign up"
authors = ["seano"]
readme = "README.md"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[tool.poetry.dependencies]
python = "^3.10"
mastodon-py = "^1.8.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
